Added google maps api key and map fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,13 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.github.clans:fab:1.6.4'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.Raizlabs.DBFlow:dbflow-processor:4.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
