--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.github.Raizlabs.DBFlow:dbflow-core:4.1.1'
-    compile 'com.github.Raizlabs.DBFlow:dbflow:4.1.1'
-    compile 'com.github.Raizlabs.DBFlow:dbflow-rx2:4.1.1'
+    compile 'com.github.Raizlabs.DBFlow:dbflow-core:4.1.2'
+    compile 'com.github.Raizlabs.DBFlow:dbflow:4.1.2'
+    compile 'com.github.Raizlabs.DBFlow:dbflow-rx2:4.1.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.code.gson:gson:2.8.2'
@@ -37,15 +37,17 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.github.clans:fab:1.6.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
+    compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.google.android.gms:play-services-places:11.0.4'
     compile 'com.android.support:support-v4:26.+'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.github.Raizlabs.DBFlow:dbflow-processor:4.1.1'
+    annotationProcessor 'com.github.Raizlabs.DBFlow:dbflow-processor:4.1.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'org.jetbrains:annotations-java5:15.0'
 }
