Swipe fixed Added show place activity blank

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,10 +55,14 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.location.PROVIDERS_CHANGED" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.location.PROVIDERS_CHANGED"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
+
+        <activity android:name=".ui.ShowPlaceActivity">
+        </activity>
     </application>
 
 </manifest>
