Move to android studio 3.0 -> Gradle 3.0.0 Added mapPhoto field to Place model Added blank page to list of my places

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
         <activity
             android:name=".ui.FavouritePlaceFormAddActivity"
             android:label="@string/title_activity_favourite_place_form_add"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustPan"
+            >
         </activity>
 
         <receiver
