--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,14 +17,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.github.Raizlabs.DBFlow:dbflow-core:4.1.2'
     compile 'com.github.Raizlabs.DBFlow:dbflow:4.1.2'
     compile 'com.github.Raizlabs.DBFlow:dbflow-rx2:4.1.2'
@@ -42,9 +45,9 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
+    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-location:11.4.2'
+    compile 'com.google.android.gms:play-services-places:11.4.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'org.jetbrains:annotations-java5:15.0'
     testCompile 'junit:junit:4.12'
