--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -41,11 +41,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.SplashScreenActivity"
+            android:name=".ui.activity.SplashScreenActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.FavouritePlaceMapActivity"/>
+        <activity android:name=".ui.activity.FavouritePlaceMapActivity"/>
         <activity
-            android:name=".ui.FavouritePlaceFormAddActivity"
+            android:name=".ui.activity.FavouritePlaceFormAddActivity"
             android:label="@string/title_activity_favourite_place_form_add"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan"
@@ -53,7 +53,7 @@
         </activity>
 
         <receiver
-            android:name=".receivers.GpsLocationReceiver"
+            android:name=".receiver.GpsLocationReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -63,7 +63,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.ShowPlaceActivity">
+        <activity android:name=".ui.activity.ShowPlaceActivity">
         </activity>
     </application>
 
