--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name=".MyPlacesApplication"
@@ -32,9 +33,9 @@
             android:value="@string/google_maps_key"/>
 
         <activity
-            android:name=".ui.activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".ui.activity.SplashScreenActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -42,15 +43,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.SplashScreenActivity"
-            android:screenOrientation="portrait"/>
+            android:name=".ui.activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan"/>
+
         <activity android:name=".ui.activity.AddPlaceOnMapActivity"/>
+
         <activity
             android:name=".ui.activity.AddPlaceActivity"
             android:label="@string/title_activity_favourite_place_form_add"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustPan">
         </activity>
+
+        <activity android:name=".ui.activity.ShowPlaceActivity"/>
+
+        <activity android:name=".ui.activity.EditPlaceActivity"
+                  android:windowSoftInputMode="adjustPan"/>
 
         <receiver
             android:name=".receiver.GpsLocationReceiver"
@@ -63,11 +73,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.activity.ShowPlaceActivity">
-        </activity>
-        <activity android:name=".ui.activity.EditPlaceActivity"
-                  android:windowSoftInputMode="adjustPan">
-        </activity>
+        <service android:name=".service.DeletePlacesService"/>
     </application>
 
 </manifest>
