--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,11 +72,13 @@
 
         <service android:name=".service.DeletePlacesService"/>
 
-        <activity android:name=".ui.activity.LoginActivity"
+        <activity
+            android:name=".ui.activity.LoginActivity"
             android:theme="@style/LoginTheme">
         </activity>
-        <activity android:name=".ui.activity.RegisterActivity"
-                  android:theme="@style/LoginTheme">
+        <activity
+            android:name=".ui.activity.RegisterActivity"
+            android:theme="@style/LoginTheme">
         </activity>
         <activity android:name=".ui.activity.SettingsActivity">
         </activity>
