--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,14 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-maps:11.6.0'
-    compile 'com.google.android.gms:play-services-location:11.6.0'
-    compile 'com.google.android.gms:play-services-places:11.6.0'
+    compile 'com.google.android.gms:play-services-maps:11.6.2'
+    compile 'com.google.android.gms:play-services-location:11.6.2'
+    compile 'com.google.android.gms:play-services-places:11.6.2'
     compile 'org.mapstruct:mapstruct-jdk8:1.2.0.Final'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'org.jetbrains:annotations-java5:15.0'
     testCompile 'junit:junit:4.12'
-    annotationProcessor 'org.mapstruct-processor:1.2.0.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
     annotationProcessor 'com.github.Raizlabs.DBFlow:dbflow-processor:4.1.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
