Added top places module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
     <application
         android:name=".MyPlacesApplication"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/myplaces_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/myplaces_launcher"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme">
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -60,7 +60,6 @@
         <activity
             android:name=".ui.activities.EditPlaceActivity"
             android:windowSoftInputMode="adjustPan"/>
-
         <activity
             android:name=".ui.activities.LoginActivity"
             android:theme="@style/LoginTheme">
@@ -70,6 +69,8 @@
             android:theme="@style/LoginTheme">
         </activity>
         <activity android:name=".ui.activities.SettingsActivity">
+        </activity>
+        <activity android:name=".ui.activities.ShowTopPlaceActivity">
         </activity>
     </application>
 
